# mcp-server-one

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  claude_desktop_config.md  configure_claude.py  pyproject.toml  run_server.py  standalone_server.py  test_apis.py  test_import.py
examples/: simple_demo.py  test_client.py
src/mcp_server_one/: __init__.py  api_client.py  main.py  server.py
tests/: __init__.py  test_api_client.py
